syntax = "proto3";

package proto;

import "common.proto";

message Location {
    string bucket = 1;
    string key = 2;
}

message Value {
    bytes content = 1;
}

message GetResponse {
    Value value = 1;
}

message PutRequest {
    Location location = 1;
    Value value = 2;
}

service KV {
    rpc Get (Location) returns (GetResponse);
    rpc Put (PutRequest) returns (Empty);
    rpc Delete (Location) returns (Empty);
}