syntax = "proto3";

package proto;

import "common.proto";

message Document {
    string id = 1;
    string content = 2;
}

message IndexRequest {
    Document document = 1;
}

message SearchQuery {
    string query = 1;
}

message SearchResults {
    repeated Document documents = 1;
}

service Search {
    rpc Index (IndexRequest) returns (Empty);
    rpc Query (SearchQuery) returns (SearchResults);
}