syntax = "proto3";

package proto;

message GetSetRequest {
    string set = 1;
}

message ModifySetRequest {
    string set = 1;
    string item = 2;
}

message SetResponse {
    repeated string items = 1;
}

service Set {
    rpc GetSet (GetSetRequest) returns (SetResponse);
    rpc AddToSet (ModifySetRequest) returns (SetResponse);
    rpc RemoveFromSet (ModifySetRequest) returns (SetResponse);
}